@@ -6,6 +6,8 @@ version <next>:
 
 - Lots of deprecated API cruft removed
 - fft and imdct optimizations for AVX (Sandy Bridge) processors
+- DPX image encoder
+
 
 version 0.7_beta1:
 
